--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,8 @@ h3 {
 }
 
 .first-button {
-    background-color: #0a3871;
-    color: white;
+    background-color:#EFF1FA;
+    color: #0A3871;
     outline:0; 
     transition:all .3s ease-out; 
     box-shadow:inset 0 -4px 0 0 rgb(128, 128, 128),
