--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,11 @@ textarea {
 }
 
 #txt-area2 {
-    background-color: white;
-    margin: 30px 20px 10px 20px;
+    background-color: white;0
+    top: 7%;
+    width: 22%;
+    height: 82%;
+    border-radius: 18px;
     color: #0A3871;
     font-size: 20px;
     text-align: left;
@@ -183,8 +186,9 @@ h3 {
 #decrypt {
     background-color: white;
     border-radius: 32px;
-    width: 30%;
-    height: 90%;
+    top: 7%;
+    width: 22%;
+    height: 82%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -197,7 +201,7 @@ h3 {
 
 .icone {
     position:absolute;
-    top: 7%;
+    top: 4%;
     width: 22%;
     height: 82%;
     border-radius: 18px;
