--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     background-image: url('/img/hp1.jpg');
     background-size: 99%;
@@ -61,9 +60,9 @@ textarea {
 }
 
 #txt-area2 {
-    background-color: white;0
-    top: 7%;
-    width: 22%;
+    background-color: white;
+    top: 10%;
+    width: 80%;
     height: 82%;
     border-radius: 18px;
     color: #0A3871;
@@ -186,24 +185,22 @@ h3 {
 #decrypt {
     background-color: white;
     border-radius: 32px;
+    position: relative;
+    bottom: auto;
     top: 7%;
     width: 22%;
-    height: 82%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding:20px;
     box-sizing: border-box;
     margin: 50px 0 0 30px;
     box-shadow: 0px 24px 32px -8px #00000014; 
 }
 
 .icone {
-    position:absolute;
-    top: 4%;
-    width: 22%;
-    height: 82%;
+    width: 100%;
     border-radius: 18px;
 }
 
