--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,14 @@ body {
     background-image: url('/img/hp1.jpg');
     background-size: 99%;
     display:flex;
-    height: 90vh;
-    width: 90vw;
+    width: 93%;
     min-height: 1%;
     font-family: 'Inter', sans-serif;
 }
 
 .hp-simbol {
-    width: 200px;
-    margin: 10px 0 0 10px ;
+    width: 300px;
+    height: 100px;
 }
 
 .hp-simbol:hover {
@@ -60,7 +59,7 @@ textarea {
 }
 
 #txt-area2 {
-    background-color: white;
+    background-color: black;
     top: 10%;
     width: 80%;
     height: 70%;
@@ -76,7 +75,7 @@ textarea {
     color: #0A3871;
     font-size: 16px;
     text-align: center;
-    color: #495057;
+    color:goldenrod;
 }
 
 .info {
@@ -183,7 +182,7 @@ h3 {
 
 /* DECODER */
 #decrypt {
-    background-color: white;
+    background-color:#000000;
     border-radius: 32px;
     position: relative;
     bottom: auto;
@@ -246,7 +245,7 @@ footer a {
 
 
 
-/* WHEN SELECT TEXT */
+/* Quando o texto for selecionado */
 ::selection {
     background-color: #0F4C81;
     color: #FFFFFF;
@@ -298,7 +297,9 @@ footer a {
     100% {
       transform: scale(1);
     }
-}
+  }
+
+
 
 /* Media Queries */
 
@@ -315,9 +316,7 @@ footer a {
         animation: expandir 1s;
     }    
     .icone {
-        position: relative;
-        top: -150vw;
-        width: 100%;
+      width: 100%;
     }
 
     .title {
@@ -339,6 +338,7 @@ footer a {
     .main .encrypt .line {
         font-size: 30px;
     }
+
     .info {
         margin: 0 0 10px 0;
     }
@@ -367,13 +367,18 @@ footer a {
         text-align: center;
     }
 
+    .btn-3 {
+        margin-top: 10px;
+        width: 85vw;
+    }
+
     footer {
         position: relative;
         text-align: center;
         bottom: 0;
     }
 
-    .social-midia a img {
+    .redes-sociais a img {
         width: 40px;
         height: 40px;
         margin: 5px;
@@ -381,7 +386,7 @@ footer a {
         padding: 8px;
     }
 
-    .social-midia a:hover {
+    .redes-sociais a:hover {
     transform: scale(1.5);
     }
 
@@ -395,6 +400,7 @@ footer a {
 
     .buttons {
         flex-direction: column;
+        margin: 10px 0 10px 0;
         height: 125px;
     }
 
@@ -403,15 +409,13 @@ footer a {
     }
 
     .icone {
-        position: relative;
-        top: 50px;
-        padding: 0%;
-        margin: 0%;
-        width: 95%;
+        width: 50%;
+        margin: -40px;
+
     }
 
     .hp-simbol {
-        margin: 30px 0 90px -10px;
+        margin: 30px 0 90px 0;
     }
 
     .hp-simbol:hover {
@@ -420,33 +424,34 @@ footer a {
     }
     
     .title {
-        left: 170px;
-        right: 10px;
+        text-align: center;
+        left: 115px;
         top: 35px;
         font-size: 25px;
-        text-align: center;
     }
 
     .main {
-        margin: -30px 5px 40px 10px
+        margin: -40px 20px 60px 20px
     }
-
-    .info {
-        font-size: 35px;
-    }
-
+    
     .main .encrypt .line {
         font-size: 25px;
     }
 
     .encrypt {
-        padding: 5px;
-        width: 90%;
+        margin: 45px 27px;
+        padding: 0px;
+        width: 100%;
     }
 
     #decrypt {
-        margin-left: 15px;
-        padding: 15px;
+        margin: 30px 53px 20px;
+        padding: 0;
+        margin-bottom: 15px;
+    }
+
+    .btn-3 {
+        width: 85vw;
     }
 
     #none {
@@ -456,8 +461,8 @@ footer a {
 
     #txt-area2 {
         font-size: 16px;
-        width: 70%;
-        height: 90px;
+        height: 100px;
+        margin: 0 0 15px;
     }
 
     #txt-area2::placeholder {
