--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,17 @@ body {
     background-image: url('/img/hp1.jpg');
     background-size: 99%;
     display:flex;
-    width: 93%;
+    width: 99vw;
+    height: 45vw;
+    padding-right: 0vw;
     min-height: 1%;
     font-family: 'Inter', sans-serif;
 }
 
 .hp-simbol {
-    width: 300px;
+    width: 200px;
     height: 100px;
+    padding-top: 20px;
 }
 
 .hp-simbol:hover {
@@ -36,7 +39,7 @@ textarea {
     font-weight: 100;  
     border: white;
     background-color:transparent;
-    width: 70%;
+    width: 50%;
     height: 70%;
     font-size: 32px;
     color:goldenrod;
@@ -61,8 +64,8 @@ textarea {
 #txt-area2 {
     background-color: black;
     top: 10%;
-    width: 80%;
-    height: 70%;
+    width: 60%;
+    height: 60%;
     border-radius: 18px;
     color: #0A3871;
     font-size: 20px;
@@ -101,7 +104,7 @@ h3 {
 /* ENCODER */
 .encrypt {
     box-sizing: border-box;
-    width: 50vw;
+    width: 60vw;
     height: 80vh;
     margin: 100px 0 0 5px;
     justify-content: center;
@@ -186,19 +189,21 @@ h3 {
     border-radius: 32px;
     position: relative;
     bottom: auto;
-    width: 75%;
-    height: 75%;
+    width: 50%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     box-sizing: border-box;
-    margin: 50px 0 0 30px;
+    margin: 50px 20px 0 30px;
     box-shadow: 0px 24px 32px -8px #00000014; 
 }
 
 .icone {
-    width: 105%;
+    width: 250px;
+    height: 500px;
+    padding-bottom: 100px;
     border-radius: 18px;
 }
 
