--- a/css/style.css
+++ b/css/style.css
@@ -404,11 +404,13 @@ footer a {
         position: relative;
         text-align: center;
         bottom: 0;
+        width: auto;
     }
 
-    .redes-sociais a img {
-        width: 40px;
-        height: 40px;
+    .social-midia a img {
+        background: beige;
+        width: 30px;
+        height: 30px;
         margin: 5px;
         border-radius: 100%;
         padding: 8px;
@@ -420,11 +422,11 @@ footer a {
 
 }
 
-@media (max-width: 375px) /*Celular*/ {
+@media (max-width: 480px) /*Celular*/ {
     
     body {
         flex-direction: column;
-        width: 375px;
+        width: 100%;
     }
 
     .buttons {
@@ -516,6 +518,6 @@ footer a {
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-end;
-        width: 375px;
+        width: auto;
     }
 }
