Adding a margin-bottom on the footer

--- a/css/style.css
+++ b/css/style.css
@@ -519,5 +519,6 @@ footer a {
         justify-content: space-between;
         align-items: flex-end;
         width: auto;
+        padding-bottom: 10px;
     }
 }
